New Font for base page.

--- a/TSDj/templates/base.html
+++ b/TSDj/templates/base.html
@@ -14,7 +14,8 @@
       rel="stylesheet"> {% endcomment %}
 
       <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Playwrite+US+Trad+Guides&family=Science+Gothic:wght@100..900&display=swap" rel="stylesheet">
-      
+      <link href="https://fonts.googleapis.com/css2?family=Bonheur+Royale&family=Coming+Soon&family=Kranky&display=swap" rel="stylesheet">
+
       {% comment %} <link href="https://fonts.googleapis.com/css2?family=Science+Gothic:wght@100..900&display=swap"
       rel="stylesheet"> {% endcomment %}
       <link rel="stylesheet" href="{% static 'css/base.css' %}">
