--- a/TSDj/static/css/base.css
+++ b/TSDj/static/css/base.css
@@ -1,12 +1,12 @@
 body {
-    font-family: "Playfair Display", serif;
+    font-family: "Playfair Display", italic;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
     font-size: 18px;
 }
 header {
-    border-bottom: 5px solid #999;
+    border-bottom: 3px solid #999;
     margin-bottom: 2rem;
     display: flex;
 }
@@ -41,11 +41,11 @@ header h1 a {
 }
 
 .post-entry p {
-    /* font-family: "Pacifico", cursive;
-    font-weight: 400;
-    font-style: normal; */
-    font-family: "Playwrite US Trad Guides", cursive;
-    font-weight: 400;
+    /* font-family: "Pacifico", cursive; */
+    /* font-family: "Bonheur Royale", cursive; */
+    font-family: "Coming Soon", cursive;
+    font-size: 24px;
+    font-weight: 600;
     font-style: normal;
     margin: 0;
 }
