--- a/TSDj/templates/base.html
+++ b/TSDj/templates/base.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
 {% load static %}
 
-
 <html lang="en">
   <head>
       
       <meta charset="UTF-8">
       <title>Django Blog</title>
    
-      {% comment %} <link href="https://fonts.googleapis.com/css2?family=Science+Gothic:wght@100..900&display=swap"
-      rel="stylesheet"> {% endcomment %}
-      {% comment %} <link href="https://fonts.googleapis.com/css2?family=Playwrite+US+Trad+Guides&family=Science+Gothic:wght@100..900&display=swap"
-      rel="stylesheet"> {% endcomment %}
 
       <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Playwrite+US+Trad+Guides&family=Science+Gothic:wght@100..900&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Bonheur+Royale&family=Coming+Soon&family=Kranky&display=swap" rel="stylesheet">
-
-      {% comment %} <link href="https://fonts.googleapis.com/css2?family=Science+Gothic:wght@100..900&display=swap"
-      rel="stylesheet"> {% endcomment %}
       <link rel="stylesheet" href="{% static 'css/base.css' %}">
   </head>
   <body>
-    <header>
-      <h1><a href="{% url 'home' %}">Django blog</a></h1>
-    </header>
-    <div>
+    <div>  
+      <header>
+        <div class="nav-left">
+          <h1><a href="{% url 'home' %}">Django blog</a></h1>
+        </div>
+        <div class="nav-right">
+          <a href={% url 'post_new'%}>Add New Blog Post</a>
+        </div>
+      </header>
       {% block content %}
       {% endblock content %}
     </div>
